--- a/tv/src/main/res/values/strings.xml
+++ b/tv/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Alan TV</string>
+    <string name="app_name">MoviesDB by Alan</string>
     <string name="browse_title">MoviesDB by Alan</string>
     <string name="related_movies">Related Videos</string>
     <string name="grid_view">Grid View</string>
