--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="top_rated">Top rated</string>
     <string name="recommendations">Recommendations</string>
     <string name="movies_not_found">Not found movies :(</string>
-    <string name="label_search">What we watch today?</string>
+    <string name="label_search">¿What will we watch today?</string>
 </resources>
