--- a/tv/src/main/res/values/strings.xml
+++ b/tv/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">MoviesDB by Alan</string>
-    <string name="browse_title">MoviesDB by Alan</string>
+    <string name="app_name">HereMovies TV</string>
+    <string name="browse_title">HereMovies TV</string>
     <string name="related_movies">Related Videos</string>
     <string name="grid_view">Grid View</string>
     <string name="error_fragment">Error Fragment</string>
@@ -22,5 +22,8 @@
     <!-- Error messages -->
     <string name="error_fragment_message">An error occurred</string>
     <string name="dismiss_error">Dismiss</string>
+    <string name="about">About</string>
+    <string name="about_heremovies">About HereMovies</string>
+    <string name="settings">Settings</string>
 
 </resources>
